Add a question sidebar in the greetings lesson

--- a/docs/lessons/greetings-salutations.mdx
+++ b/docs/lessons/greetings-salutations.mdx
@@ -57,7 +57,7 @@ also uses the beneficiary/purpose preposition indicating what the meeting is
 for.
 
 Finally, the last sentence is where we make use of a subjective subordinate
-clause we learned about above. It indicates that an action is what is *desired*
+clause we learned about above. It indicates that an *action* is what is desired
 (the verb of the main predicate).
 
 <HisyeoTabs>
@@ -65,6 +65,105 @@ clause we learned about above. It indicates that an action is what is *desired*
     <p>nü küu monodo oxon cöüfon bıtün ci.&emsp;<em>Let's meet for supper, sound good?</em></p>
     <p>nimü fölun xe monodo noyo hoi cıhöü ko.&emsp;<em>Do you want to meet me later?</em></p>
 </HisyeoTabs>
+
+:::info Responding to questions
+
+There are three types of questions that need a special answer: polar questions,
+propositive questions, and pro-form questions. Each one is answered slightly
+differently.
+
+#### Polar Questions
+
+A polar question (in English, these are often called yes-no questions) is one
+where you are offering a state or action and asking someone to indicate if that
+state or action is affirmed or not affirmed (i.e., true or false, respectively).
+
+To answer a polar question, you can respond with the verb that was used in the
+question or the negatitive marker (<HisyeoWord is='yök'/>) or both.
+
+<HisyeoTabs>
+    <p>ke mokon nı hoi lono uklo ko.&emsp;<em>"Will you eat it tomorrow?"</em></p>
+    <p>mokon.&emsp;<em>"Yes."</em></p>
+    <p>nimü cöüfon öfo ko.&emsp;<em>"Did you cook this?"</em></p>
+    <p>yök.&emsp;<em>"No."</em></p>
+    <p>nimü monodo si niün bı öhel ko.&emsp;<em>"Have you met them before?"</em></p>
+    <p>monodo yök.&emsp;<em>"I haven't"</em></p>
+</HisyeoTabs>
+
+Or, in the case of a subject complement sentence, you can respond with the
+nucleus of the complement, the verb for "to exist" (<HisyeoWord is='gö'/>) or
+the negatitive marker (<HisyeoWord is='yök'/>).
+
+<HisyeoTabs>
+    <p>ke lı gö hoi öfo hoi lono uklo ko.&emsp;<em>"Will you be here tomorrow?"</em></p>
+    <p>gö.&emsp;<em>"Yes"</em></p>
+    <p>nimü lı cunyü ko.&emsp;<em>"Are you cold?"</em></p>
+    <p>cunyü.&emsp;<em>"Yes"</em></p>
+    <p>umo Somiel lı gö hoi ulyö hoi bıtün öfo ko.&emsp;<em>"Was Samuel there tonight?"</em></p>
+    <p>yök.&emsp;<em>"No"</em></p>
+</HisyeoTabs>
+
+In either case, you can also respond with "true" (<HisyeoWord is='hokiki'/>) or
+"false" (<HisyeoWord is='hüdul'/>).
+
+<HisyeoTabs>
+    <p>ölë zowo mokon ëo si hoi bıtün öfo ko.&emsp;<em>"Did the dog get fed tonight?"</em></p>
+    <p>hüdul.&emsp;<em>"False."</em></p>
+</HisyeoTabs>
+
+#### Propositive Questions
+
+A propositive question (in English, these don't have a specific form but involve
+usage of specific sentence ending phrases like "agreed?" or "sound good?") is
+one where you are offering a state or action with an irrealis mood and
+requesting someone to indicate if they agree.
+
+Like the polar questions, you can respond with the verb that was used in the
+question or the negatitive marker (<HisyeoWord is='yök'/>) or both.
+
+<HisyeoTabs>
+    <p>nimü mokon ofek noyo hoi lono uklo ci.&emsp;<em>"Does you eating with me tomorrow sound good?"</em></p>
+    <p>mokon.&emsp;<em>"Yes."</em></p>
+    <p>nü cöüfon öfo ci.&emsp;<em>"Let's cook this!"</em></p>
+    <p>yök.&emsp;<em>"No."</em></p>
+    <p>nimü monodo niün ci.&emsp;<em>"Do you agree to meet them?"</em></p>
+    <p>monodo yök.&emsp;<em>"I don't."</em></p>
+</HisyeoTabs>
+
+Or, in the case of a subject complement sentence, you can respond with the
+nucleus of the complement, the verb "to agree" (<HisyeoWord is='wofok'/>) or the
+negatitive marker (<HisyeoWord is='yök'/>).
+
+<HisyeoTabs>
+    <p>ke lı gö hoi öfo hoi lono uklo ci.&emsp;<em>"You will be here tomorrow, right?"</em></p>
+    <p>wofok.&emsp;<em>"Agreed."</em></p>
+    <p>nimü lı cunyü ci.&emsp;<em>"You will be cold, okay?"</em></p>
+    <p>cunyü.&emsp;<em>"Yes"</em></p>
+    <p>umo Somiel küu lı gö hoi ulyö hoi bıtün öfo ci.&emsp;<em>"Samuel must be there tonight, right?"</em></p>
+    <p>yök.&emsp;<em>"No"</em></p>
+</HisyeoTabs>
+
+Unlike polar questions, you can't respond with "true" or "false" but you can
+make more formal approval setnences by making use of the verb "to agree".
+
+<HisyeoTabs>
+    <p>ü nimü ölë zowo onö mokon ëo hoi bıtün öfo ci.&emsp;<em>"You will feed the dog tonight, sound good?"</em></p>
+    <p>noyo wofok yök nënko fos noyo küu lı lö müt dënëmëk yë zomo kiösö noyo.&emsp;<em>"I do not agree because I must go to my team's practice."</em></p>
+</HisyeoTabs>
+
+#### Pro-Form Questions
+
+A pro-form question (in English, these are called open questions) is one where
+the interrogative word (<HisyeoWord is='zık'/>) is either a nucleus of a
+preposition (a noun) or a modifier.
+
+<HisyeoTabs>
+    <p>noyo küu öntön zık müt köndodü onö.&emsp;<em>"What clothes should I wear to the party?"</em></p>
+    <p>ü cüdo yë umo zık lı dıbo zık.&emsp;<em>"Whose gifts are in which boxes?"</em></p>
+    <p>nënko zık ü nimü güwolo.&emsp;<em>"Why are you scratching?"</em></p>
+</HisyeoTabs>
+
+:::
 
 ### How To Greet
 
