Tweak first steps lesson

--- a/docs/lessons/first-steps.mdx
+++ b/docs/lessons/first-steps.mdx
@@ -41,9 +41,9 @@ families but greatly impacts the minor ones.
 
 While words are being taken from languages it is important to remember that this
 language is not your native language, you will need to abandon any other rules
-or word changes that you might normally make. The word can be used as a noun,
-verb, or modifier so there's a good chance it will be used in a way that seems
-wrong to your native language's grammar.
+or word changes that you might normally make. Each Hisyëö content word can be
+used as a noun, verb, or modifier so there's a good chance it will be used in a
+way that seems wrong to your native language's grammar.
 
 **This is okay.** Try to focus on the essence of that native language word,
 imagine it being translated as the other parts of speech (aka word classes). Now
@@ -56,12 +56,12 @@ word in the sentence will tell you which derivation is being expressed.
 
 ## Art Language
 
-It's also an art language because it has taken the core of Kokanu and added many
-aesthetic, syntactic, and semantic ideas that allow it to be used as an everyday
-communication platform right now albeit with a starting "culture" in a similar
-way to how art language creators establish history to explain their language's
-idiosyncracies. The cultural lexicon of Hisyëö is a representation of what the
-creators believe to be
+Hisyëö is also an art language because it has taken the core of Kokanu and added
+many aesthetic, syntactic, and semantic ideas that allow it to be used as an
+everyday communication platform right now albeit with a starting "culture" in a
+similar way to how art language creators establish history to explain their
+language's idiosyncracies. The cultural lexicon of Hisyëö is a representation of
+what the creators believe to be
 - the fundamentals of a modern democratic society
 - the necessary critical tools to authentically discuss bad things
 - lastly, a fun and whimsical inclination that tries to bring some uniqueness
@@ -87,19 +87,26 @@ immersion training.
 :::info Examples
 
 The following are some of the current established expressions that Hisyëans use
-in day-to-day conversation:
+in day-to-day conversation. Context can often allow for some constituents to be
+omitted; these parts will be surrounded in parentheses. Further still, some
+grammatical elements have already been omitted due to syntactic drop rules but
+these will be absent in translation examples except where the rules are
+explained.
+
 <HisyeoTabs>
     <p>foxo.&emsp;<em>woah!</em></p>
-    <p>nü küu lı lö.&emsp;<em>Let's go!</em></p>
-    <p>nimü bı zık.&emsp;<em>How are you doing?</em></p>
-    <p>noyo bı xön.&emsp;<em>I am good.</em></p>
+    <p>nü küu lı lö ci.&emsp;<em>Let's go!</em></p>
+    <p>(nimü) (lı gö) bı zık.&emsp;<em>How are you doing?</em></p>
+    <p>(noyo) (lı gö) bı xön.&emsp;<em>I am well.</em></p>
     <p>lono nimü lı si gö bı zık.&emsp;<em>How has your day been?</em></p>
-    <p>bı yök xön.&emsp;<em>Not good.</em></p>
+    <p>(nı) (lı gö) bı yök xön.&emsp;<em>Not good.</em></p>
     <p>zık lı yonlüs.&emsp;<em>What's wrong?</em></p>
-    <p>lı yök sonkon&emsp;<em>It doesn't matter.</em></p>
-    <p>küu yünlön noyo.&emsp;<em>Sorry!</em></p>
+    <p>(nı) lı yök sonkon&emsp;<em>It doesn't matter.</em></p>
+    <p>küu yünlön (noyo).&emsp;<em>Sorry!</em></p>
     <p>küu lı yök cinzon.&emsp;<em>Don't worry!</em></p>
-    <p>lı yök ixölö.&emsp;<em>It's not a problem.</em></p>
+    <p>(noyo) lı konxo (hön nimü).&emsp;<em>Thank you!</em></p>
+    <p>(nı) lı yök ixölö.&emsp;<em>It's not a problem.</em></p>
+    <p>(nı) lı xünyu (uyo).&emsp;<em>It's nothing. (You're welcome.)</em></p>
     <p>noyo köi di hoi limien ko.&emsp;<em>Can I come in?</em></p>
 </HisyeoTabs>
 :::
@@ -110,15 +117,17 @@ Learning how to pronounce the words requires learning how each of the 24
 phonemes work and how they combine to form syllables. Each translation has a
 wide array of acceptable alternatives that you can use if certain sounds are too
 challenging. The distance between each sound can be subtle in certain words and
-with certain speakers but the all of the words of Hisyëö were chosen in such a
-way that there shouldn't be words that have a nearby pronunciation which would
-be too difficult to differentiate.
+with certain speakers but *all of the words of Hisyëö were chosen in such a way
+that there shouldn't be any two words that have pronunciations which would be too
+difficult to differentiate*.
 
 ### Alphabet
 
-#### Vowels
+Let's go through each phoneme and what similar sounds can also be used. All
+example words are pronounced as in US English. Take a look at the [Sounds](../intro#sounds) section
+of the introduction for some other English dialects.
 
-All example words are pronounced as in US English.
+#### Vowels
 
 ##### o - [open back unrounded vowel](https://en.wikipedia.org/wiki/Open_back_unrounded_vowel) [ɑ]
 - as in sl**o**t or f**a**ther
