small tweak to greetings lesson

--- a/docs/lessons/greetings-salutations.mdx
+++ b/docs/lessons/greetings-salutations.mdx
@@ -16,9 +16,9 @@ How to say hello, introduce yourself and describe where you're from.
 ## Verbs & Gerunds.
 
 Meeting someone involves the verb <HisyeoWord is='monodo'/> and a usage of a
-subordinate clause (an inner sentence). The subordinate clause acts similar to a
-[gerund](https://en.wikipedia.org/wiki/Gerund) would in English, meaning that it 
-allows you to refer to the action of the verb as a noun.
+subordinate clause (an inner sentence). The subordinate clause acts similar to
+how a [gerund](https://en.wikipedia.org/wiki/Gerund) would in English, meaning
+that it allows you to refer to the action of the verb as a noun.
 
 <HisyeoTabs>
     <p>xe kelo tö öni tüek, lı küzoü.&emsp;<em></em>Playing on computers is awesome.</p>
@@ -28,7 +28,7 @@ allows you to refer to the action of the verb as a noun.
 
 Starting the first sentence with a subordinate clause requires that you use a
 pause (a comma, orthographically) to ensure that the listener understands this
-to be an inner clause of the sentence. However, second example doesn't start the
+to be an inner clause of the sentence. However, he second example doesn't start
 with a subject and instead provideds it *after* the verb (<HisyeoWord is='lı'/>)
 by using the subject preposition (<HisyeoWord is='ü'/>). This allows you to
 introduce the subordinate clause at the end of the sentence which reduces the
