Tweak greetings lesson and fix description of lessons

--- a/docs/lessons/greetings-salutations.mdx
+++ b/docs/lessons/greetings-salutations.mdx
@@ -216,17 +216,21 @@ preposition. The fourth sentence makes use of the interrogative sentence ender.
 
 ### My Name Is...
 
+Proper names are an important tool to identify specific entities with great
+accuracy. In Hisyëö, proper names are modifiers and they exist connected to a
+nucleus of some kind.
+
 <HisyeoTabs>
-    <p>umo zık lı nimü.&emsp;<em>Who are you?</em></p>
+    <p>(umo) zık lı nimü.&emsp;<em>Who are you?</em></p>
     <p>noyo lı umo Zëk.&emsp;<em>I am Jake.</em></p>
     <p>zık lı somo nimü.&emsp;<em>What is your name?</em></p>
-    <p>somo noyo lı Keli.&emsp;<em>My name is Kelly.</em></p>
-    <p>umo somo zık müt nimü.&emsp;<em>What do people call you?</em></p>
-    <p>umo somo Ootyo müt noyo.&emsp;<em>People call me Aadhya.</em></p>
+    <p>somo noyo lı umo Keli.&emsp;<em>My name is Kelly.</em></p>
+    <p>(umo) somo zık (müt nimü).&emsp;<em>What do people call you?</em></p>
+    <p>(umo) somo umo Ootyo (müt noyo).&emsp;<em>People call me Aadhya.</em></p>
     <p>nimü somo zık müt cızi.&emsp;<em>What do you call yourself?</em></p>
     <p>noyo somo Ismël müt cızi.&emsp;<em>I call myself Ismail.</em></p>
     <p>noyo yünyoü somo dizel ko.&emsp;<em>Do you have a nickname?</em></p>
-    <p>somo dizel lı Yüsılnëmu123.&emsp;<em>My nickname is UserName123.</em></p>
+    <p>somo dizel lı umo Yüsılnën123.&emsp;<em>My nickname is UserName123.</em></p>
 </HisyeoTabs>
 
 ### Introducting others
