tweak sentence page and add reddit link

--- a/docs/community.mdx
+++ b/docs/community.mdx
@@ -35,7 +35,7 @@ also plan to have our own official precense on other sites. Here is the list of
 locations where we hope to have Hisyëans available to chat with:
 
 - Telegram
-- Reddit
+- [Reddit](https://www.reddit.com/r/hisyeo/)
 - Matrix
 - Mastodon
 - YouTube 
