--- a/docs/reference/sentences.mdx
+++ b/docs/reference/sentences.mdx
@@ -95,6 +95,18 @@ sentences that hinge on a change in verb but there are ways around it.
     <p>mënyüu onö bı öhël bı möcibo kelo kelo köto hoi bıtün mülü. &emsp;<em>"The kids were playing and talking all night."</em></p>
 </HisyeoTabs>
 
+### Null Constituents
+
+When an independent clause lacks a constituent like an agent/causer or
+patient/causee, such a clause is said to have a **null subject**. This means
+that the subject can be inferred through the surrounding sentence, prior
+sentences or any other contextual cues.
+
+When an indendent clause lacks a verbal constituent but contains a subject
+constituent and other thematic constituents,the clause is said to have a **null
+copula**. This means that the relationship between the subject and the thematic
+constituents can be inferred through the surrounding sentence, prior sentences
+or any other contextual cues.
 
 ### Phrase Word Order
 
@@ -138,26 +150,48 @@ clauses. These clauses are joined together using conjunctions.
 A complex sentence consists of one independent clause and at least one dependent
 clause.
 
+*Examples needed*
+
 ### Compound-Complex
 
 A compound–complex sentence (or complex–compound sentence) consists of multiple
 independent clauses, at least one of which has at least one dependent clause.
 
+*Examples needed*
+
 ## Speech Acts
 
 ### Assertives
+
 Speech acts that commit a speaker to the truth of the expressed proposition
+
+*Examples needed*
+
 ### Directives
+
 Speech acts that are to cause the hearer to take a particular action, e.g.
 requests, commands and advice
+
+*Examples needed*
+
 ### Commissives
+
 Speech acts that commit a speaker to some future action, e.g. promises and oaths
+
+*Examples needed*
+
 ### Expressives
+
 Speech acts that express on the speaker's attitudes and emotions towards the
 proposition, e.g. congratulations, excuses and thanks
+
+*Examples needed*
+
 ### Declarations
 Speech acts that change the reality in accord with the proposition of the
 declaration, e.g. baptisms, pronouncing someone guilty or pronouncing someone
 husband and wife
+
+*Examples needed*
 
 <HisyeoTooltip/>
