trim off old community verbiage

--- a/docs/community.mdx
+++ b/docs/community.mdx
@@ -27,12 +27,9 @@ levels of the
 standard. Eventually, some of lower course certificates and tests will
 supplement the manually-curated community priveleges.
 
-## Where can I meet existing community members?
+## Are there any other communities?
 
-If you'd like to discuss the language without seeking to learn it, please keep
-all those discussions to the various conglang communities of the internet. We
-also plan to have our own official precense on other sites. Here is the list of
-locations where we hope to have Hisyëans available to chat with:
+Here are all of the places that Hisyëö has a place.
 
 - Telegram
 - [Reddit](https://www.reddit.com/r/hisyeo/)
@@ -41,35 +38,11 @@ locations where we hope to have Hisyëans available to chat with:
 - YouTube 
 - GitHub Discussions
 
-:::warning Not Yet Created
-Currently, none of these public spaces are setup. Please bear with us as this is
-alpha cultureware.
-:::
-
-Even if you don't plan on learning Hisyëö, we'd love to have
-a chat with you in one of these public spaces!
-
 ## I'd like to contribute
 
 We'd love for you to join our mission! There are outstanding tickets in various
 projects in our GitHub organization. There are also numerous public domain works
 that can be translated and, if you're interested, hosted in this site. We'd also
 be glad to link to content hosted elsewhere.
-
-Bringing more people to the language and community is also appreciated. After
-acquiring some experience in speaking the language, an interview can be
-requested for them to meet with one of our community leaders.
-
-## Why so draconian?
-
-Because we feel that like many creatures on Earth, new life is often very
-fragile before becoming strong enough to thrive. A community and culture is just
-the same. Once we've established a strong core of active members we'll open the
-community up for folks who want to use the ongoing conversations for
-comprehensible input.
-
-## How can I help support financially?
-
-We are currently looking into ways we can begin fundraising.
 
 <HisyeoTooltip/>
