Add mastodon link

--- a/docs/community.mdx
+++ b/docs/community.mdx
@@ -34,7 +34,7 @@ Here are all of the places that Hisyëö has a place.
 - Telegram
 - [Reddit](https://www.reddit.com/r/hisyeo/)
 - Matrix
-- Mastodon
+- [Mastodon](https://mastodon.social/@hisyeo)
 - YouTube 
 - GitHub Discussions
 
