Fix some of the materials

--- a/docs/community.mdx
+++ b/docs/community.mdx
@@ -29,7 +29,7 @@ supplement the manually-curated community priveleges.
 
 ## Are there any other communities?
 
-Here are all of the places that Hisyëö has a place.
+Here are all of the places that Hîsyêô has a place.
 
 - Telegram
 - [Reddit](https://www.reddit.com/r/hisyeo/)
