--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -11,16 +11,16 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 
 # Introduction
 
-## What is Hisyëö?
+## What is Hîsyêô?
 
 A small language for people around the world to communicate with each other
-about big ideas.  Hisyëö was designed using these principles:
+about big ideas.  Hîsyêô was designed using these principles:
 
 ### Neutrality
 Words are sourced from all world languages proportional to the square root of
 their world population of [L1
 speakers](https://en.wikipedia.org/wiki/First_language). Many people who come to
-learn Hisyëö have a small anchor of familiarity within the lexicon. It also is
+learn Hîsyêô have a small anchor of familiarity within the lexicon. It also is
 meant to symbolize our sacred bond to our collective linguistic heritage. 
 
 Additionally, the grammar is an analytic isolating language like its forebears
@@ -34,7 +34,7 @@ that can reflect all ways of thinkings, be sufficiently comprehensible, and be
 easy to teach. So a complete moderately-naturalistic system was developed that
 improves expressiveness at the cost of some amount of neutrality. However, since
 the grammar provides more functionality and conventions than some minimalist
-languages, Hisyëö is able to reduce ambiguity which the creators of the language
+languages, Hîsyêô is able to reduce ambiguity which the creators of the language
 believe to be a second-order form of neutrality.
 
 ### Succinctness
@@ -51,7 +51,7 @@ Careful consideration is made that the semantic spaces that each individual word
 supports do not overlap the semantic spaces of other words although there are
 some hypernyms and hyponyms for certain groups of words. There should always be
 a more verbose way to explain a word which can aid in clarifying intended
-meaning and allows for a proper Hisyëö-to-Hisyëö dictionary.
+meaning and allows for a proper Hîsyêô-to-Hîsyêô dictionary.
 
 
 ### Expressivity
@@ -65,24 +65,24 @@ handling of tense, aspect, mood, causation, and volition. The language has been
 tested against a multitude of translation media to confirm that no concept is
 too challenging or too verbose to express.
 
-## Is Hisyëö An International Auxiliary Language?
+## Is Hîsyêô An International Auxiliary Language?
 
 Some of these principles, the orthography and grammatical features that you will
 learn may seem contrary to the practices of any self-respecting [International
-Auxiliary Language](http://interlanguages.net). Hisyëö **does not** strictly
+Auxiliary Language](http://interlanguages.net). Hîsyêô **does not** strictly
 follow the tradional principles (and isn't seeking to fit in any kind of
 IAL-shaped box). The creators of the language believe that too much effort
 within IAL development is spent on regularization and cherrypicking existing
 lexical and grammatical tactics of natural languages (while applying some first
-language bias regardless of the best intentions). Instead, Hisyëö pushes closer
+language bias regardless of the best intentions). Instead, Hîsyêô pushes closer
 to an [artlang](https://en.wikipedia.org/wiki/Artistic_language) or a
 [loglang](https://loglangs.wiki/Portal) by focusing less on the linguistic
 equivalent of [code golf](https://en.wikipedia.org/wiki/Code_golf) and instead
 striving for a more complete "batteries-included" language.
 
-## Where did Hisyëö come from?
+## Where did Hîsyêô come from?
 
-Hisyëö was borne out of a desire from a member of the Kokanu community to grow
+Hîsyêô was borne out of a desire from a member of the Kokanu community to grow
 Kokanu into something that could truly be versatile enough to be used for
 translations of popular media, scientific papers and philosophical treateses.
 Unfortunately for him, the Kokanu community intends the language to be as
@@ -97,7 +97,7 @@ natural languages.
 
 ## The Basics
 
-Now that you understand why and where Hisyëö came from, let's learn enough to
+Now that you understand why and where Hîsyêô came from, let's learn enough to
 write a few basic sentences.
 
 ### Sounds
@@ -106,47 +106,47 @@ For more details on the sounds including the IPA representation, check out our [
 the [phonology reference](reference/phonology).
 
 #### Vowels
-<Tabs groupId="tenkin-yë-yogö-lolü" queryString>
+<Tabs groupId="tenkîn-yê-yogô-lolû" queryString>
    <TabItem value="en_us" label="US English" default>
       <ul>
          <li>o as in sl<b>o</b>t or f<b>a</b>ther</li>
-         <li>ö as in r<b>o</b>pe or Camb<b>o</b>dia</li>
+         <li>ô as in r<b>o</b>pe or Camb<b>o</b>dia</li>
          <li>e as in b<b>e</b>d or c<b>a</b>t</li>
-         <li>ë as in m<b>a</b>y or f<b>a</b>ce</li>
-         <li>ı as in c<b>i</b>ty or w<b>i</b>ll</li>
-         <li>i as in happ<b>y</b> or c<b>ei</b>ling</li>
+         <li>ê as in m<b>a</b>y or f<b>a</b>ce</li>
+         <li>i as in c<b>i</b>ty or w<b>i</b>ll</li>
+         <li>î as in happ<b>y</b> or c<b>ei</b>ling</li>
          <li>u as in r<b>u</b>n or en<b>ou</b>gh</li>
-         <li>ü as in l<b>o</b>se, thr<b>ou</b>gh</li>
+         <li>û as in l<b>o</b>se, thr<b>ou</b>gh</li>
       </ul>
    </TabItem>
    <TabItem value="en_gb" label="British English" default>
       <ul>
          <li>o as in h<b>o</b>t or p<b>a</b>lm</li>
-         <li>ö as in g<b>oa</b>t or th<b>ou</b>ght</li>
+         <li>ô as in g<b>oa</b>t or th<b>ou</b>ght</li>
          <li>e as in b<b>e</b>d or c<b>e</b>ll</li>
-         <li>ë as in m<b>a</b>y or dr<b>a</b>pe</li>
-         <li>ı as in k<b>i</b>t or n<b>e</b>ar</li>
-         <li>i as in salt<b>y</b> or fl<b>ee</b>ce</li>
+         <li>ê as in m<b>a</b>y or dr<b>a</b>pe</li>
+         <li>i as in k<b>i</b>t or n<b>e</b>ar</li>
+         <li>î as in salt<b>y</b> or fl<b>ee</b>ce</li>
          <li>u as in str<b>u</b>t or tr<b>u</b>ffle</li>
-         <li>ü as in g<b>oo</b>se, bl<b>u</b>e</li>
+         <li>û as in g<b>oo</b>se, bl<b>u</b>e</li>
       </ul>
    </TabItem>
    <TabItem value="en_au" label="Australian English" default>
       <ul>
          <li>o as in b<b>a</b>th or st<b>a</b>rt</li>
-         <li>ö as in s<b>u</b>re or th<b>ou</b>ght</li>
+         <li>ô as in s<b>u</b>re or th<b>ou</b>ght</li>
          <li>e as in tr<b>a</b>p or b<b>a</b>d</li>
-         <li>ë as in dr<b>e</b>ss or squ<b>are</b></li>
-         <li>ı as in k<b>i</b>t or h<b>e</b>re</li>
-         <li>i as in happ<b>y</b> or h<b>ea</b>t</li>
+         <li>ê as in dr<b>e</b>ss or squ<b>are</b></li>
+         <li>i as in k<b>i</b>t or h<b>e</b>re</li>
+         <li>î as in happ<b>y</b> or h<b>ea</b>t</li>
          <li>u as in c<b>u</b>p or <b>a</b>bout</li>
-         <li>ü as in g<b>oo</b>se, f<b>oo</b>t</li>
+         <li>û as in g<b>oo</b>se, f<b>oo</b>t</li>
       </ul>
    </TabItem>
 </Tabs>
 
 #### Consonants
-<Tabs groupId="tenkin-yë-yogö-lolü" queryString>
+<Tabs groupId="tenkîn-yê-yogô-lolû" queryString>
    <TabItem value="en_us" label="US English" default>
       <ul>
          <li>h as in <b>h</b>am or <b>h</b>old</li>
@@ -228,46 +228,46 @@ Some basic words to get you started on sentence construction.
 #### Choose a subject:
 <HisyeoTabs>
    <p>noyo&emsp;<em>I</em></p>
-   <p>nimü&emsp;<em>you</em></p>
-   <p>nü&emsp;<em>we</em></p>
-   <p>niün&emsp;<em>they</em></p>
+   <p>nimû&emsp;<em>you</em></p>
+   <p>nû&emsp;<em>we</em></p>
+   <p>niûn&emsp;<em>they</em></p>
 </HisyeoTabs>
 
 #### Choose a verb:
 <HisyeoTabs>
-   <p>köto&emsp;<em>to say</em></p>
+   <p>kôto&emsp;<em>to say</em></p>
    <p>monodo&emsp;<em>to meet</em></p>
    <p>mokon&emsp;<em>to eat</em></p>
-   <p>fısun&emsp;<em>to know</em></p>
+   <p>fisun&emsp;<em>to know</em></p>
 </HisyeoTabs>
 
 #### Choose an object:
 <HisyeoTabs>
-   <p>ulyö&emsp;<em>that</em></p>
-   <p>küöxı&emsp;<em>fruit</em></p>
-   <p>bioli&emsp;<em>hello</em></p>
-   <p>sütüö&emsp;<em>friend</em></p>
+   <p>ulyô&emsp;<em>that</em></p>
+   <p>kûôxi&emsp;<em>fruit</em></p>
+   <p>bîolî&emsp;<em>hello</em></p>
+   <p>sûtûô&emsp;<em>friend</em></p>
 </HisyeoTabs>
 
 #### Choose a sentence ender:
 <HisyeoTabs>
-   <p>lötfen&emsp;<em>polite</em></p>
+   <p>lôtfen&emsp;<em>polite</em></p>
    <p>foxo&emsp;<em>surprise</em></p>
    <p>ko&emsp;<em>question</em></p>
-   <p>löicök&emsp;<em>confirmation</em></p>
+   <p>lôicôk&emsp;<em>confirmation</em></p>
    <p><em>or none</em></p>
 </HisyeoTabs>
 
 #### Now, make a sentence...
 
 <HisyeoTabs>
-   <p>noyo mokon küöxı&emsp;<em>I eat fruit</em></p>
-   <p>nimü fısun sütüö noyo ko&emsp;<em>Do you know my friend?</em></p>
+   <p>noyo mokon kûôxi&emsp;<em>I eat fruit</em></p>
+   <p>nimû fisun sûtûô noyo ko&emsp;<em>Do you know my friend?</em></p>
 </HisyeoTabs>
 
 ## Next Steps
 
-Check out the [lessons](category/lessons) for details on how to use Hisyëö in a
+Check out the [lessons](category/lessons) for details on how to use Hîsyêô in a
 multitude of different contexts.
 
 Join the [community](community) and help others learn the language.
