fix react components

--- a/docs/lessons/numbers-dates-time.mdx
+++ b/docs/lessons/numbers-dates-time.mdx
@@ -86,7 +86,7 @@ that you'll need to count all the way up to a trillion.
       </tbody>
     </table>
   </TabItem>
-  <TabItem value="opûgido" label="ɽʋʄꜿɟʌ">
+  <TabItem value="obûgîdo" label="ɽʋʄꜿɟʌ">
     <table>
       <thead>
         <tr>
@@ -416,7 +416,7 @@ to return to the main sentence clause for the remaining consituents.
         <dd><em>June 29th</em></dd>
       </dl>
     </TabItem>
-    <TabItem value="opûgido" label="ɽʋʄꜿɟʌ">
+    <TabItem value="obûgîdo" label="ɽʋʄꜿɟʌ">
       <dl>
         <dt>Malina</dt>
         <dd><HisyeoText kind='abugida'>noî Lovoiyel, nîmû yûnyoû mîkdol zik yê siskin.</HisyeoText></dd>
@@ -566,7 +566,7 @@ proper spellings would be:
           <li><HisyeoText kind='latin'>cêô Selsius</HisyeoText></li>
         </ul>
     </TabItem>
-    <TabItem value="opûgido" label="ɽʋʄꜿɟʌ">
+    <TabItem value="obûgîdo" label="ɽʋʄꜿɟʌ">
         <ul>
           <li><HisyeoText kind='abugida'>cêô Velunhoit</HisyeoText></li>
           <li><HisyeoText kind='abugida'>cêô Selsius</HisyeoText></li>
