--- a/docs/reference/word_types/determiners.mdx
+++ b/docs/reference/word_types/determiners.mdx
@@ -63,7 +63,7 @@ by using the below method of assembling parts of a number:
         <tr><td><p>1,999</p></td><td><HisyeoText kind='latin'>elfû kut, eson fîyên eson dus eson</HisyeoText></td></tr>
     </table>
   </TabItem>
-  <TabItem value="opûgido" label="ɽʋʄꜿɟʌ">
+  <TabItem value="obûgîdo" label="ɽʋʄꜿɟʌ">
     <table>
         <tr><td><strong>Number</strong></td><td><strong>ɂ́ɟɀʇɽi</strong></td></tr>
         <tr><td><p>0</p></td><td><HisyeoText kind='abugida'>xûnyu</HisyeoText></td></tr>
